--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			
 		 <div class="row justify-content-md-center">
 			     	<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-		        		<img src="img_rj/raj_2.jpg"  class="img-responsive center-block"  width=400 height=50>
+		        		<img src="img_rj/raj_3.png"  class="img-responsive center-block"  width=400 height=50>
 
 
 
