--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
 		      				
 		      					
 							<span class="mini-header">
-						<h3>Papers and Journal Articles</h3>
+						<h3>Papers and Journal Articles</h3> <a href="https://scholar.google.com/citations?user=68eqQUsAAAAJ&hl=en">(google scholar)</a>
 						</span>
 						<P>
 							<strong>AudioCast: Enabling Ubiquitous Connectivity for Embedded Systems through Audio-Broadcasting Low-power Tags</strong>
