--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 				<!-- Row 1: AudioCast -->
 				<tr>
-				  <td style="padding:16px;text-align:center;">
+				  <td style="padding:16px;text-align:left;">
 					<img src='img_rj/audiocast.png' width="500" alt="AudioCast thumbnail">
 				  </td>
 				</tr>
@@ -181,7 +181,7 @@
 			  
 				<!-- Row 2: SoMix -->
 				<tr>
-				  <td style="padding:16px;text-align:center;">
+				  <td style="padding:16px;text-align:left;">
 					<img src='img_rj/somix.png' width="500" alt="SoMix thumbnail">
 				  </td>
 				</tr>
@@ -201,7 +201,7 @@
 			  
 			<!-- Row 3: BioPulse -->
 			<tr>
-				<td style="padding:16px;text-align:center;">
+				<td style="padding:16px;text-align:left;">
 				  <img src='img_rj/BioPulse.png' width="500" alt="SoMix thumbnail">
 				</td>
 			  </tr>
@@ -220,7 +220,7 @@
 
 			  <!-- Row 4: TunnelSense -->
 			<tr>
-				<td style="padding:16px;text-align:center;">
+				<td style="padding:16px;text-align:left;">
 				  <img src='img_rj/tunnelsense.png' width="400" height="150" alt="SoMix thumbnail">
 				</td>
 			  </tr>
