--- a/index.html
+++ b/index.html
@@ -91,10 +91,19 @@
 						<h3>Latest News</h3>
 					</span>
 					<P>
+						May 2025: Awarded student travel grant for attending ACM MobiSys 2025.
+					</P>
+					<P>
+						May 2025: Selected as one of the Rising Stars at the ACM MobiSys 2025..
+					</P>
+					<P>
 						Mar 2025: <a href="papers_rj/SoMix_Mobisys.pdf">SoMix</a> accepted at MobiSys 2025.
 					</P>
 					<P>
 						Mar 2025: <a href="papers_rj/AudioCast_IMWUT.pdf">AudioCast</a> accepted to ACM IMWUT 2025.
+					</P>
+					<P>
+						Jan 2025: Awarded student travel grant for attending ACM HotMobile 2025.
 					</P>
 					<P>
 						Dec 2024: <a href="papers_rj/Biopulse_Hotmobile.pdf">BioPulse</a> (internship project with Nokia Bell Labs) accepted at ACM HotMobile 2025.
